# mio_client

./: .gitignore  .project  MANIFEST.in  README.md  index.md  pyproject.toml  setup.cfg  setup.py
data/: README.md
docs/: conf.py  index.rst
dv/uvma_mio_cli/: ip.yml
dv/uvma_mio_cli/examples/: sequence.sv
dv/uvma_mio_cli/src/: uvma_mio_cli_tdefs.sv
dv/uvme_mio_cli_st/: ip.yml
dv/uvme_mio_cli_st/src/: uvme_mio_cli_st_constants.sv  uvme_mio_cli_st_macros.sv  uvme_mio_cli_st_pkg.flist.xsim  uvme_mio_cli_st_tdefs.sv
dv/uvmt_mio_cli_st/: README.md  ip.yml
dv/uvmt_mio_cli_st/examples/: test.sv
dv/uvmt_mio_cli_st/src/: uvmt_mio_cli_st_pkg.flist  uvmt_mio_cli_st_pkg.flist.xsim  uvmt_mio_cli_st_pkg.sv
hdl/uvma_mio_cli/examples/: instantiation.sv
hdl/uvma_mio_cli/src/: uvma_mio_cli_pkg.flist.xsim
hdl/uvme_mio_cli_st/: README.md
hdl/uvme_mio_cli_st/src/: uvme_mio_cli_st_pkg.sv  uvme_mio_cli_st_tdefs.sv
hdl/uvmt_mio_cli_st/src/: uvmt_mio_cli_st_tdefs.sv
mio/: __main__.py  cmp.py  cov.py  dox.py  elab.py  results.py
mio/cli/: sim.py
sim/: .gitignore  setup_terminal.sh
src/: __init__.py  __main__.py  cfg.py  clean.py  cmp.py  cov.py  discovery.py  elab.py  history.py  install.py  mio.py  results.py  sim.py  utilities.py  vivado.py
src/mio/: cfg.py  clean.py  cmp.py  cov.py  discovery.py  dox.py  elab.py  history.py  install.py  main.py  results.py  sim.py  utilities.py  vivado.py
templates/: aldec.flist.j2  vivado.flist.j2
tests/data/config/: all.toml
tests/data/ip/: edapp.yml  uvma_axil.ip.yml
tests/e2e/: mio.toml
(+59 files in other folders)
