# Copyright Datum Technology Corporation
# SPDX-License-Identifier: Apache-2.0 WITH SHL-2.1
########################################################################################################################


[metadata]
name = mio-client
version = 0.0.1
author = Datum Technology Corporation
author_email = mio@datumtc.ca
description = The Moore.io Command Line Interface (CLI) Client is a toolchain for front-end engineering of FPGA/ASIC projects.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = SystemVerilog, UVM, DV, verilog, VHDL, hdl, rtl, synthesis, FPGA, simulation, Xilinx, Altera
url = https://datum-technology-corporation.github.io/mio_client/
project_urls =
    Bug Tracker = https://github.com/Datum-Technology-Corporation/mio_client/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Software Development :: Build Tools

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
